@@ -240,6 +240,11 @@ APR_DECLARE(apr_status_t) apr_socket_connect(apr_socket_t *sock,
     }
 }
 
+APR_DECLARE(apr_status_t) apr_socket_type_get(apr_socket_t *sock, int *type)
+{
+    *type = sock->type;
+    return APR_SUCCESS;
+}
 
 APR_DECLARE(apr_status_t) apr_socket_data_get(void **data, const char *key,
                                      apr_socket_t *sock)
